--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 patreon: shhzdmrz
-custom: ['https://www.paypal.me/shhzdmrz']
+custom: ['https://www.paypal.me/hafizmshahzad']
